made changes to programming, rebuilt output for all courses after changing default css for h1

--- a/raw/online-ed.html
+++ b/raw/online-ed.html
@@ -50,12 +50,12 @@ http://education.adelphi.edu/ed-tech
 <article><p><strong>0858-610 Distance learning, blended classes, and virtual schools</strong></p>
          <p><strong>Description:</strong> Students study online learning in distance and blended classes, and in “virtual” schools — in both higher education and K-12 settings. Looking at pedagogy, best practices, interactivity and student-centered design, this class considers the positive and negative potential of online learning in terms of universal accessibility, teacher development, economic sustainability. Online, blended and web-enhanced learning is a major part of both higher education and K-12 teaching and learning. Students must become aware of this new method of teaching, learning and instructional delivery. Students who desire to become educational professionals need to comprehend the pedagogy, best practices, interactivity and student-centric instructional design principles required for quality online, blended and web-enhanced learning. Students should have an understanding of the political issues surrounding online, blended and web-enhanced learning such as cost, technical infrastructure, teacher development, student and teacher support and profit.</p>
          <p><strong>Keywords:</strong> online learning, hybrid learning, blended learning, virtual schools, distance learning, distance education, MOOC, flipped classroom</p>
-         <div class="section level2" id="required-books">
-         <h2><a href="#TOC">Required Books</a></h2>
+         <div id="required-books" class="section level2">
+         <h2><a href="#required-books">Required Books</a></h2>
          <p>Cavanaugh, C. (2007). <em>What works in K-12 online learning</em> (1st ed.). Eugene Or.: International Society for Technology in Education.</p>
          </div>
-         <div class="section level2" id="readings">
-         <h2><a href="#TOC">Readings</a></h2>
+         <div id="readings" class="section level2">
+         <h2><a href="#readings">Readings</a></h2>
          <p>DiPietro, M. Virtual School Pedagogy: The Instructional Practices of K-12 Virtual School Teachers. Journal of Educational Computing Research v. 42 no. 3 (2010) p. 327-54</p>
          <p>Hew, K. F., et. al., Use of three-dimensional (3-D) immersive virtual worlds in K-12 and higher education settings: A review of the research [Part of a special issue: Crossing boundaries: Learning and teaching in virtual worlds]. British Journal of Educational Technology v. 41 no. 1 (January 2010) p. 33-55</p>
          <p>iNACOL (International Association for K-12 Online Learning) National Standards of Quality for Online Courses. Web site for online books: <a href="http://www.inacol.org/research/bookstore/index.php">http://www.inacol.org/research/bookstore/index.php</a></p>
@@ -63,90 +63,90 @@ http://education.adelphi.edu/ed-tech
          <p>Quality Matters Course Rubric Standards (2008-2010 edition). <a href="http://qminstitute.org/home/Public%20Library/About%20QM/RubricStandards2008-2010.pdf">http://qminstitute.org/home/Public Library/About QM/RubricStandards2008-2010.pdf</a></p>
          <p>Ragan, Larry. Best Practices for Teaching Online. Available at: <a href="http://cnx.org/content/col10453/latest">http://cnx.org/content/col10453/latest</a>.</p>
          </div>
-         <div class="section level2" id="class-sessions">
-         <h2><a href="#TOC">Class sessions</a></h2>
-         <div class="section level3" id="introduction-to-online-blended-and-web-enhanced-learning">
-         <h3><a href="#TOC">Introduction to online, blended and web-enhanced learning</a></h3>
+         <div id="class-sessions" class="section level2">
+         <h2><a href="#class-sessions">Class sessions</a></h2>
+         <div id="introduction-to-online-blended-and-web-enhanced-learning" class="section level3">
+         <h3><a href="#introduction-to-online-blended-and-web-enhanced-learning">Introduction to online, blended and web-enhanced learning</a></h3>
          <p>Students will be introduced to the basic tenets of online, blended and web-mediated learning. They will explore the use of this type of learning and instructional delivery in both higher education and K-12 environments. Students will be introduced to The Sloan Consortium (<a href="http://sloanconsortium.org/">http://sloanconsortium.org</a>) which they will use throughout the semester as a source to go to for data, best practices and general research on online learning for higher education.</p>
          <p><em>Readings due: Patrick, ch 1</em></p>
          </div>
-         <div class="section level3" id="evaluation-of-online-blended-and-web-enhanced-models">
-         <h3><a href="#TOC">Evaluation of online, blended and web-enhanced models</a></h3>
+         <div id="evaluation-of-online-blended-and-web-enhanced-models" class="section level3">
+         <h3><a href="#evaluation-of-online-blended-and-web-enhanced-models">Evaluation of online, blended and web-enhanced models</a></h3>
          <p>Students will compare and contrast the different types of learning to determine the pros, cons and future potentials for teaching and learning. Students will also evaluate what online, blended and web-enhanced learning means for educational institutions in terms of cost, technical infrastructure, faculty/teacher development, student/faculty/teacher support and profit.</p>
          <p><em>Readings due: Patrick, ch 2</em></p>
          </div>
-         <div class="section level3" id="the-notion-of-anytime-and-anyplace-learning">
-         <h3><a href="#TOC">The notion of anytime and anyplace learning</a></h3>
+         <div id="the-notion-of-anytime-and-anyplace-learning" class="section level3">
+         <h3><a href="#the-notion-of-anytime-and-anyplace-learning">The notion of anytime and anyplace learning</a></h3>
          <p>Students will look at and challenge the notion of where learning occurs. Can it take place at anytime and at anyplace or must it be within the confines of a brick and mortar building/classroom? What are the challenges of maintaining a quality education as learning is moved beyond the walls of the classroom? How have new mobile technologies allowed us to learn and teach beyond the classroom?</p>
          <p><em>Readings due: iNACOL</em></p>
          </div>
-         <div class="section level3" id="technology-for-online-and-blended-learning">
-         <h3><a href="#TOC">Technology for online and blended learning</a></h3>
+         <div id="technology-for-online-and-blended-learning" class="section level3">
+         <h3><a href="#technology-for-online-and-blended-learning">Technology for online and blended learning</a></h3>
          <p>Students will explore the different types of technologies used by higher ed and K-12 institutions to deliver courses and to connect and engage students. Students will look at the use of both proprietary and open source course/learning management systems and will review the strengths and weaknesses of each. Students will also look at the use of blogs, wikis and social networking tools for maintaining class connection and interactivity.</p>
          <p><em>Readings due: Ragan, Part I: Getting Started</em></p>
          </div>
-         <div class="section level3" id="technology-for-online-and-blended-learning---part-2">
-         <h3><a href="#TOC">Technology for online and blended learning - part 2</a></h3>
+         <div id="technology-for-online-and-blended-learning---part-2" class="section level3">
+         <h3><a href="#technology-for-online-and-blended-learning---part-2">Technology for online and blended learning - part 2</a></h3>
          <p>Students will explore the different types web conferencing applications such as Adobe Connect Pro and Skype and Second Life as well as videoconferencing tools for real-time meetings. Students will also explore the use of web-based video such as iTunesU, podcasting and textbook video resources.</p>
          <p><em>Readings due: Ragan, Part II: During Teaching</em></p>
          </div>
-         <div class="section level3" id="online-blended-and-web-enhanced-kearning-in-k-12-and-higher-education">
-         <h3><a href="#TOC">Online, blended and web-enhanced kearning in k-12 and higher education</a></h3>
+         <div id="online-blended-and-web-enhanced-kearning-in-k-12-and-higher-education" class="section level3">
+         <h3><a href="#online-blended-and-web-enhanced-kearning-in-k-12-and-higher-education">Online, blended and web-enhanced kearning in k-12 and higher education</a></h3>
          <p>Students will explore, compare and contrast online, blended and web-enhanced learning in K-12 and higher education. Why are these types of learning important, what are the challenges and what is the purpose.</p>
          <p><em>Readings due: Patrick, ch 3</em></p>
          </div>
-         <div class="section level3" id="virtual-schools">
-         <h3><a href="#TOC">Virtual schools</a></h3>
+         <div id="virtual-schools" class="section level3">
+         <h3><a href="#virtual-schools">Virtual schools</a></h3>
          <p>This session looks at the movement to create &quot;virtual schools&quot;; examining the process of creating an entire school experience online — not just some of the instructional and course components.</p>
          <p><em>Readings due: DiPietro; Hew</em></p>
          </div>
-         <div class="section level3" id="student-centered-learning">
-         <h3><a href="#TOC">Student centered learning</a></h3>
+         <div id="student-centered-learning" class="section level3">
+         <h3><a href="#student-centered-learning">Student centered learning</a></h3>
          <p>This session will cover how we teach students in online, blended and web-enhanced environments. Students will learn to design instruction for online, blended and web-enhanced environments that is student centered, interactive and incorporate active learning.</p>
          <p><em>Readings due: Patrick, ch 4 &amp; 5</em></p>
          </div>
-         <div class="section level3" id="interactivity-communication-and-active-learning">
-         <h3><a href="#TOC">Interactivity, communication and active learning</a></h3>
+         <div id="interactivity-communication-and-active-learning" class="section level3">
+         <h3><a href="#interactivity-communication-and-active-learning">Interactivity, communication and active learning</a></h3>
          <p>Students will learn how to design curriculum for online, blended and web-enhance environments that incorporates interactivity, communication and active learning.</p>
          <p><em>Readings due: Patrick, ch 9</em></p>
          </div>
-         <div class="section level3" id="differentiation-and-special-needs">
-         <h3><a href="#TOC">Differentiation and special needs</a></h3>
+         <div id="differentiation-and-special-needs" class="section level3">
+         <h3><a href="#differentiation-and-special-needs">Differentiation and special needs</a></h3>
          <p>Students will learn how to design online, blended and web-enhanced instruction that incorporates differentiation for multiple intelligences and special needs.</p>
          <p><em>Readings due: Patrick, ch 8</em></p>
          </div>
-         <div class="section level3" id="assessment">
-         <h3><a href="#TOC">Assessment</a></h3>
+         <div id="assessment" class="section level3">
+         <h3><a href="#assessment">Assessment</a></h3>
          <p>Students will learn about assessing students in online, blended and web-enhanced learning environments.</p>
          <p><em>Readings due: Quality Matters</em></p>
          </div>
-         <div class="section level3" id="teacher-professional-development">
-         <h3><a href="#TOC">Teacher professional development</a></h3>
+         <div id="teacher-professional-development" class="section level3">
+         <h3><a href="#teacher-professional-development">Teacher professional development</a></h3>
          <p>Students will learn about professional development for teachers/professors teaching in online, blended and web-enhanced environments. Students will learn about what core competencies teachers/professors should have before teaching in online or blended courses.</p>
          <p><em>Readings due: Patrick, ch 10</em></p>
          </div>
-         <div class="section level3" id="curriculum-development">
-         <h3><a href="#TOC">Curriculum development</a></h3>
+         <div id="curriculum-development" class="section level3">
+         <h3><a href="#curriculum-development">Curriculum development</a></h3>
          <p>Students will learn about the best practices for designing online, blended and web-enhanced curriculum.</p>
          <p><em>Readings due: Ragan, Part III: Putting It All Together</em></p>
          </div>
-         <div class="section level3" id="politics-of-online-and-blended-learning">
-         <h3><a href="#TOC">Politics of online and blended learning</a></h3>
+         <div id="politics-of-online-and-blended-learning" class="section level3">
+         <h3><a href="#politics-of-online-and-blended-learning">Politics of online and blended learning</a></h3>
          <p>Students will look at the various issues surrounding online and blended learning. Issues such as profit, quality of education, classroom space issues and quality of teachers/professors will be investigated.</p>
          <p><em>Readings due: Patrick, ch 11</em></p>
          </div>
-         <div class="section level3" id="final-presentations">
-         <h3><a href="#TOC">Final presentations</a></h3>
+         <div id="final-presentations" class="section level3">
+         <h3><a href="#final-presentations">Final presentations</a></h3>
          </div>
          </div>
-         <div class="section level2" id="grading-and-assessment">
-         <h2><a href="#TOC">Grading and Assessment</a></h2>
-         <div class="section level3" id="class-participation-15">
-         <h3><a href="#TOC">Class Participation (15%)</a></h3>
+         <div id="grading-and-assessment" class="section level2">
+         <h2><a href="#grading-and-assessment">Grading and Assessment</a></h2>
+         <div id="class-participation-15" class="section level3">
+         <h3><a href="#class-participation-15">Class Participation (15%)</a></h3>
          <p>Students will be assessed on the quality and depth of class discussions, as carried out through synchronous and asynchronous online activities. Class participation will be based on weekly session topics and collaborative work with class members.</p>
          </div>
-         <div class="section level3" id="reflectionresponse-papers-50">
-         <h3><a href="#TOC">Reflection/Response Papers (50%)</a></h3>
+         <div id="reflectionresponse-papers-50" class="section level3">
+         <h3><a href="#reflectionresponse-papers-50">Reflection/Response Papers (50%)</a></h3>
          <p>Students will be asked to respond to a special topic or issues related to weekly topics by way of a reflection paper. The instructor will review these papers to evaluate student mastery of the course goals, and will provide written feedback to indicate how students can improve their reflection as the semester progresses.</p>
          <p><strong>Sample questions for reflective papers:</strong></p>
          <ul>
@@ -156,8 +156,8 @@ http://education.adelphi.edu/ed-tech
          <li><strong>(session 9)</strong> As a current or future teacher, what do you think are the challenges of supporting robust collaboration and professional development when working in a primarily online or virtual school?</li>
          </ul>
          </div>
-         <div class="section level3" id="final-culminating-project-35">
-         <h3><a href="#TOC">Final Culminating Project (35%)</a></h3>
+         <div id="final-culminating-project-35" class="section level3">
+         <h3><a href="#final-culminating-project-35">Final Culminating Project (35%)</a></h3>
          <p>Students will write a design plan for implementation of an online, blended or virtual program. Students will integrate all of the components learned in this class, including plans for program/course design, student interactivity and communication, student assessment, program assessment, technical infrastructure, learning technologies, cost, faculty/teacher development and student/faculty/teacher support.</p>
          </div>
          </div></article>
@@ -187,19 +187,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Monday, 11. March 2013 09:24AM</tt></p>
+<p><tt>Last modified: Tuesday, 03. September 2013 11:32AM</tt></p>
 
-<!-- Piwik -->
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-    var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-    piwikTracker.trackPageView();
-    piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->
 
 </footer>
