--- a/raw/web-programming.html
+++ b/raw/web-programming.html
@@ -39,13 +39,13 @@ http://education.adelphi.edu/ed-tech
 
 <article><p><strong>EDT 603 <em>Programming web-based educational media</em>, Spring 2013</strong></p>
          <p><strong>Description:</strong> In this course students learn techniques of web programming to develop interactive, educational media. Using the Python programming language and web development technologies (HTML5, Javascript, CSS), students gain practice in the object oriented programming and design of interactive software. For their final project, students will create their own educational website.</p>
-         <div class="section level2" id="instructors-office-hours">
-         <h2><a href="#TOC">Instructors &amp; Office Hours</a></h2>
+         <div id="instructors-office-hours" class="section level2">
+         <h2><a href="#instructors-office-hours">Instructors &amp; Office Hours</a></h2>
          <p>Matt Curinga, Post Annex Conference Room : mcuringa@adelphi.edu : Tuesday 3:00pm - 5:00pm : Wednesday 2:30pm - 4:30pm : <em>and by appointment</em></p>
          <p>Antonios Saravanos, online via Google Hangout : saravanos@gmail.com : Monday 8:30pm - 10:30pm : Thursday 8:30pm - 10:30pm : <em>and by appointment</em></p>
          </div>
-         <div class="section level2" id="course-format">
-         <h2><a href="#TOC">Course Format</a></h2>
+         <div id="course-format" class="section level2">
+         <h2><a href="#course-format">Course Format</a></h2>
          <p>This course is fully online. Each week there will be a series of topics, for students to pursue at their own pace. Weeks will run on a Monday-to-Monday schedule. Assignments for the week are due on the following Monday.</p>
          <p>This course runs on the Cycle 3 schedule. It begins on Monday January 27 and ends on Monday March 18.</p>
          <p>Instruction will come from several sources:</p>
@@ -57,8 +57,8 @@ http://education.adelphi.edu/ed-tech
          <p>There will be instructor led labs during office hours every week, both online via Google Hangout and in-person on the Garden City campus.</p>
          <p>Students <em>must</em> attend at least 4 lab sessions. Assignments will be posted to this wiki and other communications will be sent via the Google Group Email List -- <a href="https://groups.google.com/forum/?fromgroups#!forum/au-web-programming">Adelphi Web Programming</a></p>
          </div>
-         <div class="section level2" id="goals-and-objectives">
-         <h2><a href="#TOC">Goals and Objectives</a></h2>
+         <div id="goals-and-objectives" class="section level2">
+         <h2><a href="#goals-and-objectives">Goals and Objectives</a></h2>
          <p>This course builds on CSC 602 to move beyond basic programming concepts; students will gain expertise in building more complex computer programs, over many iterations. At the end of the course, students will be able to design educationally sound web-based learning media, solve moderately complex problems using OOP, collaborate on programming projects, and identify methods for teaching programming and web development.</p>
          <p>Specific teaching and learning goals include:</p>
          <ul>
@@ -81,20 +81,20 @@ http://education.adelphi.edu/ed-tech
          <li>Polymorphism</li>
          </ul>
          </div>
-         <div class="section level2" id="required-books">
-         <h2><a href="#TOC">Required Books</a></h2>
+         <div id="required-books" class="section level2">
+         <h2><a href="#required-books">Required Books</a></h2>
          <p>Duckett, J. T. (2011). <a href="http://htmlandcssbook.com/"><em>Html &amp; css: design and build websites (1st ed.)</em></a>. Indianapolis, IN: Wiley Pubishing, Inc.</p>
          <div class="figure">
-         <img src="http://img1.imagesbn.com/p/9781118008188_p0_v1_s260x420.JPG" /><p class="caption"></p>
+         <img src="http://img1.imagesbn.com/p/9781118008188_p0_v1_s260x420.JPG" />
          </div>
          </div>
-         <div class="section level2" id="optional-books">
-         <h2><a href="#TOC">Optional Books</a></h2>
+         <div id="optional-books" class="section level2">
+         <h2><a href="#optional-books">Optional Books</a></h2>
          <p>Anderson, T. (Ed.). (2008). <a href="http://www.aupress.ca/index.php/books/120146"><em>Theory and practice of online learning</em></a>. Edmonton: AU Press.</p>
          <p>Hayward, J. (2011). <em>Django JavaScript Integration: AJAX and jQuery</em>. Packet Publishing. ISBN 1849510342</p>
          </div>
-         <div class="section level2" id="readings">
-         <h2><a href="#TOC">Readings</a></h2>
+         <div id="readings" class="section level2">
+         <h2><a href="#readings">Readings</a></h2>
          <p>Castro, Elizabeth. 2010. <em>Html 5 Visual Quickstart Guide.</em> Peachpit Press. ISBN 9780321719614.</p>
          <p>Gamma, E., Helm, R., Johnson, R., &amp; Vlissides, J. M. (1994). <em>Design Patterns: Elements of Reusable Object-Oriented Software</em> (1st ed.). Reading Mass.: Addison-Wesley Professional. ISBN 0201633612.</p>
          <p>Knuth, Donald. 1997. <em>The art of computer programming.</em> Addison-Wesley Pub. Co. Reading Mass. ISBN 9780201896831.</p>
@@ -105,8 +105,8 @@ http://education.adelphi.edu/ed-tech
          <p>Teague, Jason. 2011. <em>CSS3: Visual QuickStart Guide.</em> Peachpit Press. Berkeley CA. ISBN 9780321719638.</p>
          <p>Zelle, John. 2004. <em>Python programming: an introduction to computer science.</em>Franklin Beedle. Wilsonville, OR. ISBN 9781887902991.</p>
          </div>
-         <div class="section level2" id="schedule">
-         <h2><a href="#TOC">Schedule</a></h2>
+         <div id="schedule" class="section level2">
+         <h2><a href="#schedule">Schedule</a></h2>
          <table>
          <thead>
          <tr class="header">
@@ -159,8 +159,8 @@ http://education.adelphi.edu/ed-tech
          </tbody>
          </table>
          </div>
-         <div class="section level2" id="class-sessions">
-         <h2><a href="#TOC">Class Sessions</a></h2>
+         <div id="class-sessions" class="section level2">
+         <h2><a href="#class-sessions">Class Sessions</a></h2>
          <ul>
          <li>Week 1: HTML &amp; Web Basics</li>
          <li>Week 2: More HTMl &amp; CSS</li>
@@ -172,24 +172,24 @@ http://education.adelphi.edu/ed-tech
          <li>Week 8: Final project showcase</li>
          </ul>
          </div>
-         <div class="section level2" id="assignments-grading">
-         <h2><a href="#TOC">Assignments &amp; Grading</a></h2>
+         <div id="assignments-grading" class="section level2">
+         <h2><a href="#assignments-grading">Assignments &amp; Grading</a></h2>
          <p>There are two major projects in this course, the <em>single page website</em> and the <em>dynamic web application</em>. Other grades come from particiaption and improvement.</p>
-         <div class="section level3" id="participation-15">
-         <h3><a href="#TOC">Participation (15%)</a></h3>
+         <div id="participation-15" class="section level3">
+         <h3><a href="#participation-15">Participation (15%)</a></h3>
          <p>Students are expected to be active participants in the course, communicating via email, posting to the wiki, and completing assignments in a timely manner. The course instructors will base the participation grade on the quality and timeliness of their participation in the course.</p>
          </div>
-         <div class="section level3" id="improvement-15">
-         <h3><a href="#TOC">Improvement (15%)</a></h3>
+         <div id="improvement-15" class="section level3">
+         <h3><a href="#improvement-15">Improvement (15%)</a></h3>
          <p>The two coding projects will be based on mastery of the skills of web development. Because students come to the course with different skill sets, part of their final assessment will be based on their improvement. In the first week of the course, students will post a short, narrative self-assessment of their web programming skills: HTML, CSS, Javascript, (Python or other) Programming, and general understanding of how the Interent and Web work.</p>
          <p>At the end of the semester, each student will email the instructors with an updated assessment and the grade they think they deserve for their improvement.</p>
          </div>
-         <div class="section level3" id="single-page-website-30">
-         <h3><a href="#TOC">Single Page Website (30%)</a></h3>
+         <div id="single-page-website-30" class="section level3">
+         <h3><a href="#single-page-website-30">Single Page Website (30%)</a></h3>
          <p>Students will build a single-page, informational website on a topic of their choice. Their website will be composed of HTML, CSS, and (optionally) Javascript. It will display their fluency with the components of HTML, styling with CSS, and enhancing user experience with Javascript. The content of the website is entirely up to the student. They are encouraged to create a website on something they are already familiar with and interested in. This is an individual project.</p>
          </div>
-         <div class="section level3" id="dynamic-web-application-40">
-         <h3><a href="#TOC">Dynamic web application (40%)</a></h3>
+         <div id="dynamic-web-application-40" class="section level3">
+         <h3><a href="#dynamic-web-application-40">Dynamic web application (40%)</a></h3>
          <p>Student teams will propose, design, and execute a project. The project can be completed individually, or in a 2-person team. The requirements for the project are that it demonstrates the students understanding of server-side and client-side web development. The instructor will work with teams to develop suitable projects.</p>
          </div>
          </div></article>
@@ -219,19 +219,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Monday, 11. March 2013 09:24AM</tt></p>
+<p><tt>Last modified: Tuesday, 03. September 2013 11:32AM</tt></p>
 
-<!-- Piwik -->
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-    var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-    piwikTracker.trackPageView();
-    piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->
 
 </footer>
