re-built courses and pushed to web

--- a/raw/intro-to-programming.html
+++ b/raw/intro-to-programming.html
@@ -24,6 +24,7 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#class-meetings">Class meetings</a></li>
 <li><a href="#programming-lab">Programming Lab</a></li>
 <li><a href="#assignments-and-grading">Assignments and Grading</a><ul>
+<li><a href="#computational-thinking-dicussion-leader">Computational Thinking Dicussion Leader</a></li>
 <li><a href="#quizzes">Quizzes</a></li>
 <li><a href="#programming-projects">Programming projects</a><ul>
 <li><a href="#project-1-facebook-status">Project 1: Facebook Status</a></li>
@@ -94,6 +95,7 @@ http://education.adelphi.edu/ed-tech
          <p>Alvarado, C., Dodds, Z., Kuenning, G., &amp; Libeskind-Hadas, R. (2013). <a href="http://www.cs.hmc.edu/csforall/"><em>CS for All</em></a>.</p>
          <p>Barry, P. (2009). <em>Head first programming: [a learner’s guide to programming using the Python language]</em>. Beijing ; Sebastopol, CA: O’Reilly.</p>
          <p>Downey, A. (2012). <em>Think Python</em>. Sebastopol, CA: O’Reilly. <a href="http://www.greenteapress.com/thinkpython/html/index.html">free</a> <a href="http://faculty.stedwards.edu/mikek/python/thinkpython.pdf">py v3</a></p>
+         <p>Pilgrim, M. (2009). <a href="http://www.diveinto.org/python3/index.html"><em>Dive into Python 3</em></a>. New York: Apress.</p>
          <p>Zelle, J. (2010). <em>Python Programming: An Introduction to Computer Science</em>. Franklin, Beedle &amp; Associates Inc.</p>
          </div>
          <div class="section level1" id="class-meetings">
@@ -223,23 +225,38 @@ http://education.adelphi.edu/ed-tech
          </thead>
          <tbody>
          <tr class="odd">
+         <td align="left">Discussion Leader</td>
+         <td align="left">10%</td>
+         </tr>
+         <tr class="even">
          <td align="left">Quizzes</td>
          <td align="left">20%</td>
          </tr>
-         <tr class="even">
+         <tr class="odd">
          <td align="left">Project 1</td>
          <td align="left">20%</td>
          </tr>
-         <tr class="odd">
-         <td align="left">Project 2</td>
-         <td align="left">25%</td>
-         </tr>
          <tr class="even">
+         <td align="left">Project 2</td>
+         <td align="left">20%</td>
+         </tr>
+         <tr class="odd">
          <td align="left">Project 3</td>
-         <td align="left">35%</td>
+         <td align="left">30%</td>
          </tr>
          </tbody>
          </table>
+         <div class="section level2" id="computational-thinking-dicussion-leader">
+         <h2><a href="#TOC">Computational Thinking Dicussion Leader</a></h2>
+         <p>Each student will take a turn leading a discussion about an area of topical interest related to computational thinking and computational literacy. As the leader, you may, optionally, send out a short reading to the class on the discussion as background reading.</p>
+         <p>When you lead the discussion, be prepared to:</p>
+         <ol style="list-style-type: decimal">
+         <li>introduce the topic with relevant information</li>
+         <li>describe why you think it is an important issue</li>
+         <li>discuss how it is related to computational literacy</li>
+         <li>facilitate a 10-15 minute discussion with the class</li>
+         </ol>
+         </div>
          <div class="section level2" id="quizzes">
          <h2><a href="#TOC">Quizzes</a></h2>
          <p>There will be 10 pass/fail quizzes which will be completed individually at the start of class. Quizzes consist of 3-5 short answer programming questions drawn directly from the reading for the week. Quizzes are designed to be passed easily by students who are keeping up with the reading and the concepts in the course, and will help students and the instructor maintain a good pace for the development of the course. <em>If you fail a quiz, you will be required to attend the programming lab on Thursdays until you pass your next quiz.</em></p>
@@ -353,7 +370,19 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Tuesday, 03. September 2013 03:24PM</tt></p>
+<p><tt>Last modified: Tuesday, 03. September 2013 07:43PM</tt></p>
 
+<!-- Piwik -->
+<script type="text/javascript">
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
+document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+try {
+    var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+    piwikTracker.trackPageView();
+    piwikTracker.enableLinkTracking();
+} catch( err ) {}
+</script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+<!-- End Piwik Tracking Code -->
 
 </footer>
