changes to programming

--- a/raw/intro-to-programming.html
+++ b/raw/intro-to-programming.html
@@ -60,7 +60,7 @@ http://education.adelphi.edu/ed-tech
          <li><a href="http://matt.curinga.com">Matthew X. Curinga</a>, <script type="text/javascript">
          <!--
          h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;';e=n+a+h;
-         document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+'a'+'>');
+         document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
          // -->
          </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript></li>
          <li><a href="http://goo.gl/maps/XReYB" title="Where is Post Annex? click the link to see it on a map">Post Annex, Room 1</a></li>
@@ -70,7 +70,7 @@ http://education.adelphi.edu/ed-tech
          <li>Ariel Fleurimond, <script type="text/javascript">
          <!--
          h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#114;&#x69;&#x65;&#108;&#102;&#108;&#x65;&#x75;&#114;&#x69;&#x6d;&#x6f;&#110;&#100;';e=n+a+h;
-         document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+'a'+'>');
+         document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
          // -->
          </script><noscript>&#x61;&#114;&#x69;&#x65;&#108;&#102;&#108;&#x65;&#x75;&#114;&#x69;&#x6d;&#x6f;&#110;&#100;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript></li>
          </ul>
@@ -85,21 +85,22 @@ http://education.adelphi.edu/ed-tech
          <ul>
          <li>Thursday, 6pm-8:30pm, Harvey 104 and/or Google Hangout</li>
          </ul>
-         <div class="section level1" id="required-text">
-         <h1><a href="#TOC">Required Text</a></h1>
+         <div id="required-text" class="section level1">
+         <h1><a href="#required-text">Required Text</a></h1>
          <p><em>None.</em></p>
          </div>
-         <div class="section level1" id="readings-bibliography">
-         <h1><a href="#TOC">Readings &amp; Bibliography</a></h1>
-         <p><em>This is a selected bibliography of computer science and Python texts and other materials that you may explore as references or further reading.</em></p>
-         <p>Alvarado, C., Dodds, Z., Kuenning, G., &amp; Libeskind-Hadas, R. (2013). <a href="http://www.cs.hmc.edu/csforall/"><em>CS for All</em></a>.</p>
+         <div id="readings-bibliography" class="section level1">
+         <h1><a href="#readings-bibliography">Readings &amp; Bibliography</a></h1>
+         <p><em>This is a selected bibliography of computer science and Python texts and other materials that you may explore as references or further reading. Many weekly readings will come from these materials. Specific readings will be posted on Moodle for each week.</em></p>
+         <p>Alvarado, C., Dodds, Z., Kuenning, G., &amp; Libeskind-Hadas, R. (2013). <a href="http://www.cs.hmc.edu/csforall/"><em>CS for All</em></a>. Claremont, CA: Harvey Mudd College.</p>
          <p>Barry, P. (2009). <em>Head first programming: [a learner’s guide to programming using the Python language]</em>. Beijing ; Sebastopol, CA: O’Reilly.</p>
          <p>Downey, A. (2012). <em>Think Python</em>. Sebastopol, CA: O’Reilly. <a href="http://www.greenteapress.com/thinkpython/html/index.html">free</a> <a href="http://faculty.stedwards.edu/mikek/python/thinkpython.pdf">py v3</a></p>
          <p>Pilgrim, M. (2009). <a href="http://www.diveinto.org/python3/index.html"><em>Dive into Python 3</em></a>. New York: Apress.</p>
+         <p><a href="http://docs.python.org/3/tutorial/"><em>The Python Tutorial v.3.3</em></a>.</p>
          <p>Zelle, J. (2010). <em>Python Programming: An Introduction to Computer Science</em>. Franklin, Beedle &amp; Associates Inc.</p>
          </div>
-         <div class="section level1" id="class-meetings">
-         <h1><a href="#TOC">Class meetings</a></h1>
+         <div id="class-meetings" class="section level1">
+         <h1><a href="#class-meetings">Class meetings</a></h1>
          <p>Introduction to computer programming meets every Tuesday, 4:30-6:20 in Harvey 104. All students are expected to come on time and prepared for class. You may bring your own laptop to class, or use one of the lab computers for your work. If you need source files to work on in class</p>
          <table>
          <thead>
@@ -132,7 +133,7 @@ http://education.adelphi.edu/ed-tech
          <tr class="even">
          <td align="left">4</td>
          <td align="left">25-Sep</td>
-         <td align="left">Simple Functions</td>
+         <td align="left">Functions</td>
          <td align="left">Quiz 3</td>
          </tr>
          <tr class="odd">
@@ -168,19 +169,19 @@ http://education.adelphi.edu/ed-tech
          <tr class="even">
          <td align="left">10</td>
          <td align="left">6-Nov</td>
-         <td align="left">Sorting lists</td>
+         <td align="left">Sorting</td>
          <td align="left"><strong>Project 2</strong></td>
          </tr>
          <tr class="odd">
          <td align="left">11</td>
          <td align="left">13-Nov</td>
-         <td align="left">String functions</td>
+         <td align="left">Libraries and modules</td>
          <td align="left">Quiz 8</td>
          </tr>
          <tr class="even">
          <td align="left">12</td>
          <td align="left">20-Nov</td>
-         <td align="left">Dates and other standard library</td>
+         <td align="left">Graphical output with SVG</td>
          <td align="left">Quiz 9</td>
          </tr>
          <tr class="odd">
@@ -192,7 +193,7 @@ http://education.adelphi.edu/ed-tech
          <tr class="even">
          <td align="left">13</td>
          <td align="left">4-Dec</td>
-         <td align="left">Introducing classes</td>
+         <td align="left">Custom datatypes with Classes</td>
          <td align="left">Quiz 10</td>
          </tr>
          <tr class="odd">
@@ -210,12 +211,12 @@ http://education.adelphi.edu/ed-tech
          </tbody>
          </table>
          </div>
-         <div class="section level1" id="programming-lab">
-         <h1><a href="#TOC">Programming Lab</a></h1>
+         <div id="programming-lab" class="section level1">
+         <h1><a href="#programming-lab">Programming Lab</a></h1>
          <p>Every week the teaching assistant will host a programming lab/workshop. It is highly recommended that you attend every lab session. The TA will lead you through sample problems very similar to what will be on the quizzes, will help debug/troubleshoot your code, and will</p>
          </div>
-         <div class="section level1" id="assignments-and-grading">
-         <h1><a href="#TOC">Assignments and Grading</a></h1>
+         <div id="assignments-and-grading" class="section level1">
+         <h1><a href="#assignments-and-grading">Assignments and Grading</a></h1>
          <table>
          <thead>
          <tr class="header">
@@ -246,8 +247,8 @@ http://education.adelphi.edu/ed-tech
          </tr>
          </tbody>
          </table>
-         <div class="section level2" id="computational-thinking-dicussion-leader">
-         <h2><a href="#TOC">Computational Thinking Dicussion Leader</a></h2>
+         <div id="computational-thinking-dicussion-leader" class="section level2">
+         <h2><a href="#computational-thinking-dicussion-leader">Computational Thinking Dicussion Leader</a></h2>
          <p>Each student will take a turn leading a discussion about an area of topical interest related to computational thinking and computational literacy. As the leader, you may, optionally, send out a short reading to the class on the discussion as background reading.</p>
          <p>When you lead the discussion, be prepared to:</p>
          <ol style="list-style-type: decimal">
@@ -256,16 +257,17 @@ http://education.adelphi.edu/ed-tech
          <li>discuss how it is related to computational literacy</li>
          <li>facilitate a 10-15 minute discussion with the class</li>
          </ol>
+         <p>This assignment can be completed individual or in teams of 2.</p>
          </div>
-         <div class="section level2" id="quizzes">
-         <h2><a href="#TOC">Quizzes</a></h2>
+         <div id="quizzes" class="section level2">
+         <h2><a href="#quizzes">Quizzes</a></h2>
          <p>There will be 10 pass/fail quizzes which will be completed individually at the start of class. Quizzes consist of 3-5 short answer programming questions drawn directly from the reading for the week. Quizzes are designed to be passed easily by students who are keeping up with the reading and the concepts in the course, and will help students and the instructor maintain a good pace for the development of the course. <em>If you fail a quiz, you will be required to attend the programming lab on Thursdays until you pass your next quiz.</em></p>
          </div>
-         <div class="section level2" id="programming-projects">
-         <h2><a href="#TOC">Programming projects</a></h2>
+         <div id="programming-projects" class="section level2">
+         <h2><a href="#programming-projects">Programming projects</a></h2>
          <p>You will complete three programming projects, of increasing complexity, as the major portions of your course.</p>
-         <div class="section level3" id="project-1-facebook-status">
-         <h3><a href="#TOC">Project 1: Facebook Status</a></h3>
+         <div id="project-1-facebook-status" class="section level3">
+         <h3><a href="#project-1-facebook-status">Project 1: Facebook Status</a></h3>
          <p>You will write a program to categorize Facebook status posts as either &quot;happy&quot; or &quot;sad&quot;.</p>
          <p><strong>Programming competencies:</strong></p>
          <ul>
@@ -307,8 +309,8 @@ http://education.adelphi.edu/ed-tech
          </ul></li>
          </ul>
          </div>
-         <div class="section level3" id="project-2-text-analysis">
-         <h3><a href="#TOC">Project 2: Text Analysis</a></h3>
+         <div id="project-2-text-analysis" class="section level3">
+         <h3><a href="#project-2-text-analysis">Project 2: Text Analysis</a></h3>
          <p>For this project you will select a text or a collection of texts and write a program that uses computation to analyze the texts. It is up to you to both select the texts and to decide what type of analysis is &quot;interesting.&quot;</p>
          <p>In addition to improving on the programming competencies from project 1, you should demonstrate the following in your code:</p>
          <ul>
@@ -338,10 +340,11 @@ http://education.adelphi.edu/ed-tech
          </ul></li>
          </ul>
          </div>
-         <div class="section level3" id="project-3-refactoring-visualization">
-         <h3><a href="#TOC">Project 3: Refactoring &amp; Visualization</a></h3>
+         <div id="project-3-refactoring-visualization" class="section level3">
+         <h3><a href="#project-3-refactoring-visualization">Project 3: Refactoring &amp; Visualization</a></h3>
          <p>For your final project, you can team up with one of your classmates to revisit and improve your earlier code. In particular, you should make your code more robust, more flexible, and improve your tests. You should explicitly write code that demonstrates your understanding of <code>abstraction</code>, <code>encapsulation</code>, and <code>algorithms</code>. In the final class meeting you will present your project in class, and show the parts of your program that best exemplify these concepts, as you understand them.</p>
          <p>In addition to improving and expanding your existing code, you will add a graphical visualization of your results using the a Scalable Vector Graphics (SVG) library. SVGs are graphics files that can be displayed in any modern web browser, and will let you create things like line graphs, bar graphs, labels, heat maps, and other visualizations.</p>
+         <p>This assignment must be completed in a team of 2. If you wish to work in a team of three, please seek instructor permission.</p>
          </div>
          </div>
          </div></article>
@@ -370,19 +373,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Tuesday, 03. September 2013 07:43PM</tt></p>
+<p><tt>Last modified: Thursday, 05. September 2013 01:41PM</tt></p>
 
-<!-- Piwik -->
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-    var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-    piwikTracker.trackPageView();
-    piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->
 
 </footer>
