--- a/raw/mlearning.html
+++ b/raw/mlearning.html
@@ -55,12 +55,7 @@ http://education.adelphi.edu/ed-tech
          <p><strong>Educational Technology 0858-512</strong></p>
          <p><strong>Course description.</strong> Most of the world connects to the Internet from mobile phones. Android tablets and iPads are filtering into schools — and the hands of children. Students carry significant computing power in their pockets. This course considers how mobile computing forces us to reconsider the time and the place of learning.</p>
          <p><strong>Keywords:</strong> mlearning, mobile learning, android, ipad, tablet computing, one-to-one computing, 1:1, olpc</p>
-         <p><strong>Intructor:</strong> <a href="http://matt.curinga.com">Matthew X. Curinga</a><br /> <strong>Email:</strong> <script type="text/javascript">
-         <!--
-         h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;';e=n+a+h;
-         document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
-         // -->
-         </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript><br /> <strong>Class:</strong> Harvey 104, Wed. 6:30-8:20 (every other week)<br /> <strong>Office hours:</strong> Post Annex 1, Mon 3-5pm, Tues, 2-4pm, Wed. by appointment (in person or online)<br /> <strong>Course website:</strong> <a href="http://mlearnau.tumblr.com">http://mlearnau.tumblr.com</a></p>
+         <p><strong>Previous Course website:</strong> <a href="http://mlearnau.tumblr.com">http://mlearnau.tumblr.com</a></p>
          <div class="img-right">
          <img src="http://www.internationalhero.co.uk/d/dicktracy.jpg" title="go to the originating site, thanks for the art" alt="http://www.internationalhero.co.uk/d/diktracy.htm" /> 1951, Dick Tracy's wearable computer
          </div>
@@ -95,18 +90,18 @@ http://education.adelphi.edu/ed-tech
          <li>you must &quot;follow&quot; mlearnau and all of the other members of the class</li>
          </ul></li>
          <li>you must check Tumblr at least once a day</li>
-         <li><strong>post once, comment twice</strong>, this will be the main online interaction for the course (i.e. what makes it blended)
+         <li><strong>post once, comment twice</strong>, this will be the main online interaction for the course
          <ul>
-         <li>every week you are required to post a 300+ word reading response, by the <strong>end of day on Sunday</strong></li>
+         <li>every week you are required to post a <strong>~500 word</strong> <a href="#reading-responses">reading response</a>, by the <strong>end of day on Sunday</strong></li>
          <li>for your reading response
          <ul>
          <li>refer closely to the reading</li>
          <li>you <em>must</em> use the tags #reading response #sessionXX where XX refers to the class session/week</li>
          </ul></li>
-         <li>comments are due <strong>before class on Wednesday</strong></li>
+         <li>comments due by <strong>end of day on Wednesday</strong></li>
          </ul></li>
          <li>you should try to read/post using your mobile phone and other mobile devices; some work, though, is better suited to using larger computers</li>
-         <li>other than reading responses, you should use your blog to post links, quotes, and other mLearning related resources</li>
+         <li>other than reading responses, you should use your blog to post links, quotes, jokes, and other mLearning related resources</li>
          <li>for questions about the course and support:
          <ul>
          <li>post a question on your blog, you never know who may help you out</li>
@@ -121,79 +116,79 @@ http://education.adelphi.edu/ed-tech
          <thead>
          <tr class="header">
          <th align="left">week</th>
-         <th align="center">date</th>
+         <th align="left">date</th>
          <th align="left">topic</th>
          <th align="left">reading</th>
-         <th align="left">Due</th>
+         <th align="left">due</th>
          </tr>
          </thead>
          <tbody>
          <tr class="odd">
          <td align="left">1</td>
-         <td align="center">11/3/13</td>
+         <td align="left">11/3/13</td>
          <td align="left">Going mobile</td>
          <td align="left">Weiser, Traxler, Sixth Sense</td>
          <td align="left">poem</td>
          </tr>
          <tr class="even">
          <td align="left">2</td>
-         <td align="center">11/10/13</td>
+         <td align="left">11/10/13</td>
          <td align="left">Situated cognition &amp; embodiment</td>
          <td align="left">Brown, Wenger, Naismith, Billings</td>
          <td align="left">-</td>
          </tr>
          <tr class="odd">
          <td align="left">3</td>
-         <td align="center">11/10/13</td>
+         <td align="left">11/10/13</td>
          <td align="left">Constructionism and 1:1 computing</td>
          <td align="left">Papert, Penuel, OLPC, Negroponte</td>
          <td align="left">tech reports</td>
          </tr>
          <tr class="even">
          <td align="left">4</td>
-         <td align="center">11/17/13</td>
+         <td align="left">11/17/13</td>
          <td align="left">Supporting the classroom</td>
          <td align="left">Pasnik, Wishart, Chaiprasurt, Martyn</td>
          <td align="left"></td>
          </tr>
          <tr class="odd">
          <td align="left">5</td>
-         <td align="center">11/24/13</td>
+         <td align="left">11/24/13</td>
          <td align="left">mobile tech/political dissent</td>
          <td align="left">Castells, Mirzoeff, Morozov, Doctorow</td>
          <td align="left">video interview</td>
          </tr>
          <tr class="even">
          <td align="left">6</td>
-         <td align="center">12/1/13</td>
+         <td align="left">12/1/13</td>
          <td align="left">Mobile games for learning</td>
          <td align="left">Facer, Squire (2010)</td>
          <td align="left"></td>
          </tr>
          <tr class="odd">
          <td align="left">7</td>
-         <td align="center">12/8/13</td>
+         <td align="left">12/8/13</td>
          <td align="left">Tablets &amp; ereaders</td>
          <td align="left">Hillesund, Hu</td>
          <td align="left"></td>
          </tr>
          <tr class="even">
          <td align="left">8</td>
-         <td align="center">12/15/13</td>
+         <td align="left">12/15/13</td>
          <td align="left">Apps4Ed</td>
          <td align="left">Mayer, Ritter</td>
          <td align="left">App Review</td>
          </tr>
          <tr class="odd">
          <td align="left">9</td>
-         <td align="center">1/5/14</td>
+         <td align="left">1/5/14</td>
          <td align="left">Mobile interfaces &amp; design</td>
          <td align="left">Nielsen, van der Merwe, Apple Inc</td>
          <td align="left"></td>
          </tr>
          <tr class="even">
          <td align="left">10</td>
-         <td align="center">1/12/14</td>
+         <td align="left">1/12/14</td>
          <td align="left">Final Projects</td>
          <td align="left"></td>
          <td align="left">Final Project</td>
@@ -207,61 +202,48 @@ http://education.adelphi.edu/ed-tech
          <thead>
          <tr class="header">
          <th align="left">assignment</th>
-         <th align="left">due</th>
          <th align="left">pct</th>
          </tr>
          </thead>
          <tbody>
          <tr class="odd">
-         <td align="left">Professionalism rubric</td>
-         <td align="left">last session</td>
-         <td align="left">10%</td>
+         <td align="left">Reading response posts</td>
+         <td align="left">20%</td>
          </tr>
          <tr class="even">
-         <td align="left">Reading response posts</td>
-         <td align="left">weekly (10 total)</td>
+         <td align="left">Professionalism self-assesment</td>
          <td align="left">10%</td>
          </tr>
          <tr class="odd">
          <td align="left">Where I'm from</td>
-         <td align="left">session 2</td>
          <td align="left">10%</td>
          </tr>
          <tr class="even">
          <td align="left">Tech report</td>
-         <td align="left">session 3</td>
          <td align="left">10%</td>
          </tr>
          <tr class="odd">
          <td align="left">Mobile video interview</td>
-         <td align="left">session 6</td>
          <td align="left">10%</td>
          </tr>
          <tr class="even">
-         <td align="left">Midterm essay</td>
-         <td align="left">session 8</td>
-         <td align="left">15%</td>
-         </tr>
-         <tr class="odd">
          <td align="left">App Review</td>
-         <td align="left">session 13</td>
-         <td align="left">10%</td>
-         </tr>
-         <tr class="even">
-         <td align="left">Podcasts</td>
-         <td align="left">sessions 10 &amp; 14</td>
          <td align="left">10%</td>
          </tr>
          <tr class="odd">
+         <td align="left">Podcast</td>
+         <td align="left">10%</td>
+         </tr>
+         <tr class="even">
          <td align="left">Final Project/Paper</td>
-         <td align="left">last session</td>
-         <td align="left">15%</td>
+         <td align="left">20%</td>
          </tr>
          </tbody>
          </table>
+         <p>Grades for assignments will be posted on the offical Moodle course website. The professionalism self-assessment will also be completed through Moodle.</p>
          <div class="section level3" id="reading-responses">
          <h3><a href="#reading-responses">Reading Responses</a></h3>
-         <p>Almost every week, you will be asked to post a <em>reading response</em> on your Tumblr. This is the main online interaction for this blended course, and will happen most weeks — regardless of whether we are schedule to meet in person or not. Your reading response should be approximately 300-500 words, but occasionally may call for more or less.</p>
+         <p>Every week you will be asked to post a <em>reading response</em> on your Tumblr. This is the main online interaction for this course. Your reading response should be approximately 500 words, but occasionally may call for more or less.</p>
          <p>A good reading response:</p>
          <ol style="list-style-type: decimal">
          <li>refers to the readings and other online activities (like video, or mobile assignments) due that week</li>
@@ -273,18 +255,17 @@ http://education.adelphi.edu/ed-tech
          <li><strong>is posted before the end of day on Sunday, every week</strong></li>
          </ol>
          <p>In addition to your own response, you should check Tumblr and Disqus every day. You are required to comment on at least two of your peer's responses each week. Usually you will want to respond to people who engage with you.</p>
-         <p>There are a total of 11 possible response. 10 of them will be graded (you get one free pass). You will get either 1 point or 0 points, no partial credit. Late responses will be accepted (but highly discouraged) up until Wed. Chronic late responses will bring down your grade on your professionalism rubric.</p>
+         <p>There are a total of 9 responses due for this course. You will get either 2, 1, or 0 points for your post. Late responses will be accepted (but highly discouraged) up until Wed. If you post on time every week, you will get an extra 2 points for this assignment. Chronic late responses will bring down your grade on your professionalism rubric.</p>
          </div>
          <div class="section level3" id="professionalism-rubric">
          <h3><a href="#professionalism-rubric">Professionalism rubric</a></h3>
          <p>At the end of the semester, you will fill out a self-evaluation of your professional conduct in the class. You will be asked to reflect on:</p>
          <ul>
-         <li>class attendance</li>
-         <li>reading respons posts</li>
+         <li>reading response posts</li>
          <li>preparation and engagement with course readings</li>
-         <li>participation in class and online discussions</li>
+         <li>participation in online discussions</li>
          <li>contribution to group assignments</li>
-         <li>promptness of course materials</li>
+         <li>promptness of assignments</li>
          </ul>
          </div>
          <div class="section level3" id="where-im-from">
@@ -484,7 +465,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Wednesday, 09. October 2013 09:04AM</tt></p>
+<p><tt>Last modified: Wednesday, 09. October 2013 09:46AM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
